discussion/kv_engine/173486/173486_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51681: Add tests for MemOverhead{,Queue,Index}

Expand on testCheckpointManagerMemUsage to test the
base case of a single checkpoint's memory
calculations.

Add a test to validate that the CheckpointManager's
getMemOverhead(), getMemOverheadIndex(), and
getMemOverheadQueue() are calculated correctly as
the sum of all Checkpoints managed by the CM.

Change-Id: I76c920a2dbc99fea1fbe6917dde8450f06f6a62e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-04-21 08:07:20.000000000
Message: 
Patch Set 9: Patch Set 8 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-21 08:15:58.000000000
Message: 
Patch Set 9: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45446/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\checkpoint_test.cc(3372): error C2039: "getCheckpointMaxSize": is not a member of "VBucket" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45446/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16823/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33: error: no member named "getCheckpointMaxSize" in "VBucket" [clang-diagnostic-error]
    const std::string value(vb->getCheckpointMaxSize(), "!");
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16823/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: no member named "getCheckpointMaxSize" in "VBucket" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16823/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6481/ : FAILURE

Compile error at [2022-04-21T08:08:47.530Z] ../kv_engine/engines/ep/src/configuration.h:185:10:
fatal error: "generated_configuration.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6481/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17704/ : FAILURE

Compile error at [2022-04-21T08:11:53.186Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: no member named "getCheckpointMaxSize" in "VBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17704/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19645/ : FAILURE

Compile error at [2022-04-21T08:08:43.033Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: no member named "getCheckpointMaxSize" in "VBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19645/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18944/ : FAILURE

Compile error at [2022-04-21T08:09:47.560Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: ?using element_type = class VBucket? {aka ?class VBucket?} has no member named ?getCheckpointMaxSize?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18944/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18607/ : FAILURE

Compile error at [2022-04-21T08:09:46.923Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: ?using element_type = class VBucket? {aka ?class VBucket?} has no member named ?getCheckpointMaxSize?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18607/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27012/ : FAILURE

Compile error at [2022-04-21T08:10:10.799Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: no member named "getCheckpointMaxSize" in "VBucket"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27012/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6554/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6554/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38178/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15768/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-21 09:14:41.000000000
Message: 
Patch Set 9: Verified-1 -Code-Review

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27008/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27008/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6479/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6479/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19642/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19642/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18604/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18604/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18940/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18940/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17699/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17699/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6541/ : FAILURE

Compile error at [2022-04-21T08:13:12.801Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3372:33:
error: ?using element_type = class VBucket? {aka ?class VBucket?} has no member named ?getCheckpointMaxSize?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6541/ )
----------------------------------------------------------------------------------------------------------------------
